// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> component renders a Basic Table 1`] = `
.emotion-0 {
  table-layout: fixed;
  width: 100%;
  border-spacing: 0;
}

.emotion-2 {
  display: table-header-group;
}

.emotion-4 {
  display: table-row;
  border-radius: 0px;
  box-shadow: none;
  padding: 0px;
  width: 100%;
  background-color: #ffffff;
  cursor: auto;
}

.emotion-6 {
  text-align: left;
  color: #1d1d1d;
  padding: 0 16px 16px;
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  left: 0px;
  right: unset;
  position: -webkit-sticky;
  position: sticky;
  z-index: 2;
  background: #ffffff;
  box-shadow: 1px 0 0 0 #f2f2f2;
}

.emotion-8 {
  text-align: left;
  color: #1d1d1d;
  padding: 0 16px 16px;
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-10 {
  text-align: left;
  color: #1d1d1d;
  padding: 0 16px 16px;
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  left: unset;
  right: 0px;
  position: -webkit-sticky;
  position: sticky;
  z-index: 2;
  background: #ffffff;
  box-shadow: -1px 0 0 0 #f2f2f2;
}

.emotion-12 {
  text-align: left;
  color: #1d1d1d;
  padding: 0 16px 16px;
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  left: unset;
  right: 0px;
  position: -webkit-sticky;
  position: sticky;
  z-index: 2;
  background: #ffffff;
  box-shadow: unset;
}

.emotion-14 {
  display: table-header-group;
}

.emotion-14 tr:hover td {
  background-color: #f2f2f2;
}

.emotion-16 {
  display: table-row;
  border-radius: 0px;
  box-shadow: none;
  padding: 0px;
  width: 100%;
  background-color: #ffffff;
  cursor: pointer;
}

.emotion-18 {
  display: table-cell;
  min-width: 110px;
  word-break: break-word;
  border-top: 1px solid #f2f2f2;
  padding: 16px;
  text-align: left;
  color: #252525;
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  left: 0px;
  right: unset;
  position: -webkit-sticky;
  position: sticky;
  z-index: 1;
  background: #ffffff;
  box-shadow: 1px 0 0 0 #f2f2f2;
}

.emotion-18:first-of-type {
  padding-top: 16px;
  border-bottom: none;
}

.emotion-20 {
  display: table-cell;
  min-width: 110px;
  word-break: break-word;
  border-top: 1px solid #f2f2f2;
  padding: 16px;
  text-align: left;
  color: #252525;
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-20:first-of-type {
  padding-top: 16px;
  border-bottom: none;
}

.emotion-22 {
  display: table-cell;
  min-width: 110px;
  word-break: break-word;
  border-top: 1px solid #f2f2f2;
  padding: 16px;
  text-align: left;
  color: #252525;
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  left: unset;
  right: 0px;
  position: -webkit-sticky;
  position: sticky;
  z-index: 1;
  background: #ffffff;
  box-shadow: -1px 0 0 0 #f2f2f2;
}

.emotion-22:first-of-type {
  padding-top: 16px;
  border-bottom: none;
}

.emotion-24 {
  display: table-cell;
  min-width: 110px;
  word-break: break-word;
  border-top: 1px solid #f2f2f2;
  padding: 16px;
  text-align: left;
  color: #252525;
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
  left: unset;
  right: 0px;
  position: -webkit-sticky;
  position: sticky;
  z-index: 1;
  background: #ffffff;
  box-shadow: unset;
}

.emotion-24:first-of-type {
  padding-top: 16px;
  border-bottom: none;
}

<div>
  <table
    class="emotion-0 emotion-1"
    data-testid="table"
  >
    <thead
      class="emotion-2 emotion-3"
      data-testid="table-head"
    >
      <tr
        class="emotion-4 emotion-5"
        data-testid="table-row"
      >
        <th
          class="emotion-6 emotion-7"
          data-column-index="0"
          data-fixed-position="0"
          data-testid="table-column-header"
        >
          Column 1
        </th>
        <th
          class="emotion-8 emotion-7"
          data-testid="table-column-header"
        >
          Column 2
        </th>
        <th
          class="emotion-10 emotion-7"
          data-column-index="2"
          data-fixed-position="0"
          data-testid="table-column-header"
        >
          Column 3
        </th>
        <th
          class="emotion-12 emotion-7"
          data-column-index="3"
          data-fixed-position="0"
          data-testid="table-column-header"
        >
          Column 4
        </th>
      </tr>
    </thead>
    <tbody
      class="emotion-14 emotion-15"
      data-testid="table-body"
    >
      <tr
        class="emotion-16 emotion-5"
        data-testid="table-row"
      >
        <td
          class="emotion-18 emotion-19"
          data-column-index="0"
          data-fixed-position="0"
          data-testid="table-data-cell"
        >
          Row 1 - content 1
        </td>
        <td
          class="emotion-20 emotion-19"
          data-testid="table-data-cell"
        >
          Row 1 - content 2
        </td>
        <td
          class="emotion-22 emotion-19"
          data-column-index="2"
          data-fixed-position="0"
          data-testid="table-data-cell"
        >
          Row 1 - content 3
        </td>
        <td
          class="emotion-24 emotion-19"
          data-column-index="3"
          data-fixed-position="0"
          data-testid="table-data-cell"
        >
          Row 1 - content 4
        </td>
      </tr>
      <tr
        class="emotion-16 emotion-5"
        data-testid="table-row"
      >
        <td
          class="emotion-18 emotion-19"
          data-column-index="0"
          data-fixed-position="0"
          data-testid="table-data-cell"
        >
          Row 2 - content 1
        </td>
        <td
          class="emotion-20 emotion-19"
          data-testid="table-data-cell"
        >
          Row 2 - content 2
        </td>
        <td
          class="emotion-22 emotion-19"
          data-column-index="2"
          data-fixed-position="0"
          data-testid="table-data-cell"
        >
          Row 2 - content 3
        </td>
        <td
          class="emotion-24 emotion-19"
          data-column-index="3"
          data-fixed-position="0"
          data-testid="table-data-cell"
        >
          Row 2 - content 4
        </td>
      </tr>
      <tr
        class="emotion-16 emotion-5"
        data-testid="table-row"
      >
        <td
          class="emotion-18 emotion-19"
          data-column-index="0"
          data-fixed-position="0"
          data-testid="table-data-cell"
        >
          Row 3 - content 1
        </td>
        <td
          class="emotion-20 emotion-19"
          data-testid="table-data-cell"
        >
          Row 3 - content 2
        </td>
        <td
          class="emotion-22 emotion-19"
          data-column-index="2"
          data-fixed-position="0"
          data-testid="table-data-cell"
        >
          Row 3 - content 3
        </td>
        <td
          class="emotion-24 emotion-19"
          data-column-index="3"
          data-fixed-position="0"
          data-testid="table-data-cell"
        >
          Row 3 - content 4
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<Table /> component renders a Basic Table without fixed columns 1`] = `
.emotion-0 {
  table-layout: auto;
  width: 100%;
  border-spacing: 0;
}

.emotion-2 {
  display: table-header-group;
}

.emotion-4 {
  display: table-row;
  border-radius: 0px;
  box-shadow: none;
  padding: 0px;
  width: 100%;
  background-color: #ffffff;
  cursor: auto;
}

.emotion-6 {
  text-align: left;
  color: #1d1d1d;
  padding: 0 16px 16px;
  font-family: Daimler CS;
  font-size: 12px;
  font-weight: 700;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-14 {
  display: table-header-group;
}

.emotion-14 tr:hover td {
  background-color: #f2f2f2;
}

.emotion-18 {
  display: table-cell;
  min-width: 110px;
  word-break: break-word;
  border-top: 1px solid #f2f2f2;
  padding: 16px;
  text-align: left;
  color: #252525;
  font-family: Daimler CS;
  font-size: 14px;
  font-weight: 400;
  letter-spacing: 0px;
  line-height: 16px;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-18:first-of-type {
  padding-top: 16px;
  border-bottom: none;
}

<div>
  <table
    class="emotion-0 emotion-1"
    data-testid="table"
  >
    <thead
      class="emotion-2 emotion-3"
      data-testid="table-head"
    >
      <tr
        class="emotion-4 emotion-5"
        data-testid="table-row"
      >
        <th
          class="emotion-6 emotion-7"
          data-testid="table-column-header"
        >
          Column 1
        </th>
        <th
          class="emotion-6 emotion-7"
          data-testid="table-column-header"
        >
          Column 2
        </th>
        <th
          class="emotion-6 emotion-7"
          data-testid="table-column-header"
        >
          Column 3
        </th>
        <th
          class="emotion-6 emotion-7"
          data-testid="table-column-header"
        >
          Column 4
        </th>
      </tr>
    </thead>
    <tbody
      class="emotion-14 emotion-15"
      data-testid="table-body"
    >
      <tr
        class="emotion-4 emotion-5"
        data-testid="table-row"
      >
        <td
          class="emotion-18 emotion-19"
          data-testid="table-data-cell"
        >
          Row 1 - content 1
        </td>
        <td
          class="emotion-18 emotion-19"
          data-testid="table-data-cell"
        >
          Row 1 - content 2
        </td>
        <td
          class="emotion-18 emotion-19"
          data-testid="table-data-cell"
        >
          Row 1 - content 3
        </td>
        <td
          class="emotion-18 emotion-19"
          data-testid="table-data-cell"
        >
          Row 1 - content 4
        </td>
      </tr>
      <tr
        class="emotion-4 emotion-5"
        data-testid="table-row"
      >
        <td
          class="emotion-18 emotion-19"
          data-testid="table-data-cell"
        >
          Row 2 - content 1
        </td>
        <td
          class="emotion-18 emotion-19"
          data-testid="table-data-cell"
        >
          Row 2 - content 2
        </td>
        <td
          class="emotion-18 emotion-19"
          data-testid="table-data-cell"
        >
          Row 2 - content 3
        </td>
        <td
          class="emotion-18 emotion-19"
          data-testid="table-data-cell"
        >
          Row 2 - content 4
        </td>
      </tr>
      <tr
        class="emotion-4 emotion-5"
        data-testid="table-row"
      >
        <td
          class="emotion-18 emotion-19"
          data-testid="table-data-cell"
        >
          Row 3 - content 1
        </td>
        <td
          class="emotion-18 emotion-19"
          data-testid="table-data-cell"
        >
          Row 3 - content 2
        </td>
        <td
          class="emotion-18 emotion-19"
          data-testid="table-data-cell"
        >
          Row 3 - content 3
        </td>
        <td
          class="emotion-18 emotion-19"
          data-testid="table-data-cell"
        >
          Row 3 - content 4
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
